<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf2_bridge_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mrp@simon-schaefer.net">Simon Schaefer</maintainer>
  <maintainer email="Luigi.Palmieri@de.bosch.com">Luigi Palmieri</maintainer>

  <license>Apache 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
